# llama-kotlin-android

./: .gitignore  PUBLISHING.md  README.md  publish.sh  settings.gradle.kts  sync-upstream.sh
.github/workflows/: publish.yml  release.yml  upstream-sync.yml
app/: build.gradle.kts  consumer-rules.pro
app/src/androidTest/java/org/codeshipping/llamakotlin/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  llama_context_wrapper.cpp  llama_context_wrapper.h  llama_jni.cpp
app/src/main/java/org/codeshipping/llamakotlin/: LlamaConfig.kt  LlamaModel.kt  LlamaNative.kt
app/src/main/java/org/codeshipping/llamakotlin/exception/: LlamaException.kt
app/src/test/java/org/codeshipping/llamakotlin/: ExampleUnitTest.kt
gradle/: libs.versions.toml
sample/: build.gradle.kts
sample/release/baselineProfiles/1/: sample-release.dm
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/llamakotlin/sample/: MainActivity.kt
sample/src/main/java/org/codeshipping/llamakotlin/sample/: MainActivity.kt
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: strings.xml  themes.xml
